updated for routes; scraped/saved header change

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       <span><br></span>
-      <span class="d-block p-2 bg-primary text-white">Scraped articles displayed below - Click Save Article button to save</span>
+      <span id="infoHeader"></span>
     </div>   
   </div>
 
